# rust-guild-trivago-2023

./: Dockerfile  README.md  build.sh  package.json
.github/workflows/: ci.yml
nodejs/demo/: package.json
nodejs/demo/__tests__/: playground-serde-wasm-bindgen.test.ts  playground-wasm-panic.test.ts  playground-wasm-tsify.test.ts  schema-parser-wasm.test.ts
nodejs/demo/src/: io.ts  panic.ts  parse-schema.ts  validate-ast.ts
nodejs/demo/src/utils/: WasmPanicRegistry.ts  getWasmPanicError.ts
nodejs/demo/wasm/: playground_serde_wasm_bindgen.js  playground_serde_wasm_bindgen_bg.wasm  playground_serde_wasm_bindgen_bg.wasm.d.ts  playground_wasm_bindgen.js  playground_wasm_bindgen_bg.wasm  playground_wasm_bindgen_bg.wasm.d.ts  playground_wasm_io.js  playground_wasm_io_bg.wasm  playground_wasm_io_bg.wasm.d.ts  playground_wasm_panic.d.ts  playground_wasm_panic.js  playground_wasm_panic_bg.wasm  playground_wasm_panic_bg.wasm.d.ts  playground_wasm_tsify.d.ts  playground_wasm_tsify.js  playground_wasm_tsify_bg.wasm  playground_wasm_tsify_bg.wasm.d.ts  schema_parser_wasm.d.ts  schema_parser_wasm.js  schema_parser_wasm_bg.wasm  schema_parser_wasm_bg.wasm.d.ts
nodejs/scripts/: package.json
rust/: Cargo.toml
rust/playground-wasm-panic/: Cargo.toml
rust/playground-wasm-panic/src/: lib.rs
rust/schema-parser/: Cargo.toml
rust/schema-parser-wasm/: Cargo.toml
rust/schema-parser-wasm/src/: lib.rs
rust/schema-parser/src/: lib.rs
rust/schema-parser/src/ast/: datasource_db.rs
rust/schema-parser/src/parse/: parser.rs  schema.rs
rust/schema-parser/src/validate/: diagnostics.rs  validator.rs
