[package]
name = "playground-wasm-panic"
version = "0.1.0"
edition = "2021"
authors = ["Alberto Schiabel <alberto.schiabel@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "playground_wasm_panic"

[dependencies]
wasm-bindgen = { workspace = true }
