[package]
name = "schema-parser"
version = "0.1.0"
edition = "2021"
authors = ["Alberto Schiabel <alberto.schiabel@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]
name = "schema_parser"

[features]
wasm = ["tsify", "wasm-bindgen"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

nom = { version = "7.1.1" }

[dev-dependencies]
paste = "1.0.9"
